recursion.cons.lessons.recursion.cons.Increasing.scala.error
increasing:2: error: type mismatch;
 found   : Unit
 required: Boolean
	for (i <- 0 to l.length-1) {
               ^