recursion.cons.lessons.recursion.cons.Increasing.scala.code
def increasing(l:List[Int]): Boolean = {
	for (i <- 0 to l.length-1) {
		if (l(i+1) > l(i)) {
			return true
		} else false
	}
}
